{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 35,
  "lineage": "5be2d0e3-1515-2cf1-2edd-64e87e6f7241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bia_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03972092c42e8c0ca",
            "arn": "arn:aws:ec2:us-east-1:175014665151:instance/i-01fe6940f2e31fe9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fe6940f2e31fe9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f27a53c09f046974",
            "private_dns": "ip-172-31-45-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.25",
            "public_dns": "ec2-54-208-81-47.compute-1.amazonaws.com",
            "public_ip": "54.208.81.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06219ef3ef73a63f8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "bia-dev-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01472d88b519b4a44",
            "tags": {
              "Name": "bia-dev-tf",
              "ambiente": "dev"
            },
            "tags_all": {
              "Name": "bia-dev-tf",
              "ambiente": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8d0b9fe74cdb6e5"
            ]
          },
          "dependencies": [
            "aws_security_group.bia-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bia-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175014665151:security-group/sg-0f8d0b9fe74cdb6e5",
            "description": "Regra para instancia de trabalho bia-dev com tf",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8d0b9fe74cdb6e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberado 3001 para o mundo",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "bia-dev-tf",
            "name_prefix": "",
            "owner_id": "175014665151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e36bcd0c6e74938e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "saida",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175014665151:security-group-rule/sgr-0b4028461773e9b56",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b4028461773e9b56",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f8d0b9fe74cdb6e5",
            "security_group_rule_id": "sgr-0b4028461773e9b56",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bia-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "entrada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175014665151:security-group-rule/sgr-08b3a6e5d9fba7ee9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Liberado 3001 para o mundo",
            "from_port": 3001,
            "id": "sgr-08b3a6e5d9fba7ee9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f8d0b9fe74cdb6e5",
            "security_group_rule_id": "sgr-08b3a6e5d9fba7ee9",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bia-dev"
          ]
        }
      ]
    }
  ]
}